# ms_ai

./: README.md
Computer Science for A.I/: README.md  denominadorComun.py  fibonacci.py  numerosIzqDer.py  primeNumbers.py  quadraticFunction.py
Intelligent Systems/: README.md
Machine Learning/: README.md
Machine Learning/Homework 1/: AnalyticLinearRegression.py  ans_data_1.txt  ans_data_2.txt  ans_data_3.txt  ans_data_4.txt
Machine Learning/taller_01_regresion_lineal/: LevenbergMarquardt.py  Makefile
Machine Learning/taller_01_regresion_lineal/cxx/: CostLinearRegression.h  CostLinearRegression.hxx  analytical_linear_regression.cxx  gradient_linear_regression.cxx
Machine Learning/taller_01_regresion_lineal/data_no_noise/: create.sh  p_00.txt  p_01.txt  p_02.txt  p_03.txt  p_04.txt  p_05.txt  p_06.txt  p_07.txt  p_08.txt  p_09.txt  p_10.txt  p_11.txt  p_12.txt  p_13.txt  p_14.txt  p_15.txt  p_16.txt  p_17.txt  p_18.txt  p_19.txt  p_20.txt  p_21.txt  p_22.txt  p_23.txt  p_24.txt  p_25.txt  p_26.txt  p_27.txt  p_28.txt  p_29.txt  p_30.txt  p_31.txt  p_32.txt  p_33.txt  p_34.txt  p_35.txt  p_36.txt  p_37.txt  p_38.txt  (+11 more)
Machine Learning/taller_01_regresion_lineal/data_noise/: create.sh  p_00.txt  p_01.txt  p_02.txt  p_03.txt  p_04.txt  p_05.txt  p_06.txt  p_07.txt  p_08.txt  p_09.txt  p_10.txt  p_11.txt  p_12.txt  p_13.txt  p_14.txt  p_15.txt  p_16.txt  p_17.txt  p_18.txt  p_19.txt  p_20.txt  p_21.txt  p_22.txt  p_23.txt  p_24.txt  p_25.txt  p_26.txt  p_27.txt  p_28.txt  p_29.txt  p_30.txt  p_31.txt  p_32.txt  p_33.txt  p_34.txt  p_35.txt  p_36.txt  p_37.txt  p_38.txt  (+11 more)
Machine Learning/taller_01_regresion_lineal/helpers/: create_polynomial_data.py  create_random_data.py
Machine Learning/taller_01_regresion_lineal/python3/: CostLinearRegression.py  ReadData.py  gradient_linear_regression.py  (+1 more)
Medical Images/compute_curvature_flow/: CMakeLists.txt  ccf.cxx  compute_curvature_flow.py
Medical Images/curvature_flow/: CMakeLists.txt  cf.cxx
Medical Images/gradient_magnitude_grayscale/: CMakeLists.txt  gmg.cxx
Medical Images/mean_filter/: CMakeLists.txt  mean.cxx  mean_filter.py
Medical Images/median_filter/: CMakeLists.txt  median.cxx  median_filter.py
thesis/: PCA_all_chanels.py  PCA_per_chanel.py  drawHumidityRegions.py  haralick_features.py  process_images.py
